added query by author and category

--- a/templates/blog_pages/blog-single.html
+++ b/templates/blog_pages/blog-single.html
@@ -38,8 +38,10 @@
                 <div class="user-image bdr-radius"><img src="{% static 'images/user-thumb/girl.jpg' %}" alt="girl"
                     class="img-fluid" /></div>
                 <div class="media-body user-info">
+                  <a href="{% url 'blog:author' author_username=posts.author %}">
                   <h5>توسط {{posts.author.get_full_name}}</h5>
                   <!-- <p>{{posts.published_date.date}}</p> -->
+                </a>
                   <p>{{posts.published_date.date|date:"d M Y"}}</p>
                 </div>
               </div>
