--- a/templates/blog_pages/blog-home.html
+++ b/templates/blog_pages/blog-home.html
@@ -125,17 +125,19 @@
 	</div>
 </section>
 <!--End Blog Grid-->
+
 <!-- Start paginator -->
-<!-- css of button lnk btn-main bg-btn -->
-<!-- <span class="circle"></span> -->
+	<!-- css of button lnk btn-main bg-btn -->
+	<!-- <span class="circle"></span> -->
 <center>
 	<div>
 		<span class="step-links">
 			{% if posts.has_previous %}
-			<a class="btn-main bg-btn3 bg-btn lnk mt20 " href="?page={{ posts.previous_page_number }}">
-				<!-- &laquo;  -->
-				<i class="fas fa-chevron-right fa-icon"></i>
+			<a href="#" class="btn-main bg-btn3 lnk mt20">
+				‌
+				<i	class="fas fa-chevron-right fa-icon"></i>
 			</a>
+
 			{% endif %}
 			{% for pages in posts.paginator.page_range %}
 			{% if pages == posts.number %}
@@ -148,6 +150,7 @@
 			{% endfor %}
 			{% if posts.has_next %}
 			<a class="btn-main bg-btn3 lnk mt20  " href="?page={{ posts.paginator.num_pages }}">
+				‌
 				<i class="fas fa-chevron-left fa-icon"></i>
 				<!-- &raquo; -->
 		</span>
