--- a/templates/blog_pages/search_bar.html
+++ b/templates/blog_pages/search_bar.html
@@ -3,13 +3,14 @@
 <div class="col-lg-4 v-center">
 
     <div class="email-subs-form">
-        <li>
-            <form action="{% url 'blog:search' %}" method="get">
-                <input type="search" placeholder="متن جست‌وجو" name="s">
-                <button type="text"  class="lnk btn-main bg-btn"> جست‌وجو <i
-                        class="fas fa-chevron-left fa-icon"></i><span class="circle"></span></button>
-            </form>
-        </li>
+        <br>
+        <br>
+        <form action="{% url 'blog:search' %}" method="get">
+            <input type="search" placeholder="متن جست‌وجو" name="s">
+            <button type="text" class="lnk btn-main bg-btn"> جست‌وجو <i class="fas fa-chevron-left fa-icon"></i><span
+                    class="circle"></span></button>
+        </form>
+
     </div>
 
 </div>
