--- a/templates/popularlatestpost.html
+++ b/templates/popularlatestpost.html
@@ -2,7 +2,7 @@
 
 <div class="col-lg-4 col-sm-6 footer-blog-">
     <h5>
-    جدید ترین‌ها    
+    محبوب ترین پست های اخیر   
     </h5>
     <!-- Start-->
     {% for post in posts %}
@@ -10,19 +10,29 @@
         <div class="post-thumb"><a href="{% url 'blog:blog_single' pid=post.id %}"><img src="{{post.image.url}}" alt="blog"></a>
         </div>
         <div class="content">
+            
             <p class="post-meta"><span class="post-date">
                     <i class="far fa-clock">
 
                     </i>
-                    {{post.published_date|date:"Y/m/d"}}
+                    {{post.published_date|date:"Y/m/d"}} 
+                    -
+                        <i class="far fa-eye" ></i>{{post.counted_view}}
+
                 </span>
             </p>
+            
             <h4 class="title"><a href="{% url 'blog:blog_single' pid=post.id %}">
                     {{post.title|truncatewords:8}}
+                    
                 </a>
             </h4>
+
+            
         </div>
+        
     </div>
+    
     <br>
     {% endfor %}
     <!-- end-->
