added link contact us in base

--- a/templates/base.html
+++ b/templates/base.html
@@ -119,6 +119,7 @@
                             </div>
                         </li>
 
+                        <li><a href="{% url 'website:contact' %}" class="btn-br bg-btn3 btshad-b2 lnk">تماس مستقیم <span
                                     class="circle"></span></a> </li>
                     </ul>
                 </div>
