--- a/templates/blog_pages/blog-home.html
+++ b/templates/blog_pages/blog-home.html
@@ -10,24 +10,26 @@
 				<div class="col-lg-12 v-center">
 					<div class="bread-inner">
 						<div class="bread-menu">
+							<div class="bread-title text-radius text-light text-animation bg-b">
+
+								<h2> نیواکس | NIWAX</h2>
+ 
+							</div>
+							<br>
 							<ul>
 								<!-- خانه  -->
-								<li><a href="index.html"> </a></li>
-								<li> نیواکس، اخبار تکنلوژی در یک نگاه </li>
-
+								<li> نیواکس، جدیدترین‌ها یک نگاه </li>
 							</ul>
 						</div>
-						<div class="bread-title">
+						<!-- text-radius text-light text-animation bg-b -->
 
-							<h2> خوش آمدید♥ </h2>
-						</div>
 					</div>
 				</div>
 				<center>
 					{% load search_bar %}
-					{% searchbar  %}
-				  </center>
-		  
+					{% searchbar %}
+				</center>
+
 			</div>
 		</div>
 	</div>
@@ -39,7 +41,7 @@
 
 		<div class="row">
 
-			
+
 			<!-- start for -->
 			{% if searchkey %}
 			<center>
@@ -108,7 +110,7 @@
 				</div>
 
 			</div>
-			
+
 			{% endfor %}
 			{% else %}
 			<center>
@@ -136,15 +138,15 @@
 <!--End Blog Grid-->
 
 <!-- Start paginator -->
-	<!-- css of button lnk btn-main bg-btn -->
-	<!-- <span class="circle"></span> -->
+<!-- css of button lnk btn-main bg-btn -->
+<!-- <span class="circle"></span> -->
 <center>
 	<div>
 		<span class="step-links">
 			{% if posts.has_previous %}
 			<a href="#" class="btn-main bg-btn3 lnk mt20">
 				‌
-				<i	class="fas fa-chevron-right fa-icon"></i>
+				<i class="fas fa-chevron-right fa-icon"></i>
 			</a>
 
 			{% endif %}
