--- a/templates/website_pages/contact-us.html
+++ b/templates/website_pages/contact-us.html
@@ -80,54 +80,13 @@
 				<div class="form-block">
 
 					<!-- Start form -->
-					<form id="contactForm" data-bs-toggle="validator" class="shake">
+					<form id="contactForm" action="{% url 'website:contact' %}" data-bs-toggle="validator" method="POST" class="shake">
 						<div class="row">
-							<!-- نام -->
-							<div class="form-group col-sm-6">
-								<input name ="name" type="text" id="name" placeholder="نام" required data-error="لطفا پر کنید">
-								<div class="help-block with-errors"></div>
-							</div>
-							<!-- ایمیل -->
-							<div class="form-group col-sm-6">
-								<input name ="email" type="email" id="email" placeholder="ایمیل" required>
-								<div class="help-block with-errors"></div>
-							</div>
+						{% csrf_token %}
+							{{forms.as_p}}
 
+							<button type="submit" name="submit"></button>
 						</div>
-						<div class="row">
-							<!-- موبایل -->
-							<div class="form-group col-sm-6">
-								<input name ="number" type="text" id="mobile" placeholder="موبایل" required data-error="لطفا پر کنید">
-								<div class="help-block with-errors"></div>
-							</div>
-							<!-- موضوع -->
-							<div class="form-group col-sm-6">
-								<input name ="subject" type="text" id="subject" placeholder="موضوع">
-							</div>
-
-						</div>
-
-						<!-- پیام -->
-						<div class="form-group">
-							<textarea id="message" rows="5" placeholder="پیام خود را وارد نمایید" required></textarea>
-							<div class="help-block with-errors"></div>
-						</div>
-						<!-- موافقت با قوانین -->
-						<div class="custom-control custom-checkbox">
-							<input type="checkbox" class="custom-control-input" id="customCheck" name="example1"
-								checked="checked">
-							<label class="custom-control-label" for="customCheck">من با <a
-									href="javascript:void(0)">قوانین</a> موافقم</label>
-						</div>
-						<!-- دکمه ارسال -->
-						<button type="submit" id="form-submit" class="btn lnk btn-main bg-btn">ارسال <span
-								class="circle"></span>ارسال </button>
-						<div id="msgSubmit" class="h3 text-center hidden"></div>
-						<div class="clearfix"></div>
-
-						<!-- عدم ارسال هرز نامه -->
-						<p class="trm"><i class="fas fa-lock"></i>ما از هرزنامه متنفریم و به حریم خصوصی شما احترام می
-							گذاریم.</p>
 
 					</form>
 					<!-- End form -->
