--- a/templates/website_pages/contact-us.html
+++ b/templates/website_pages/contact-us.html
@@ -3,8 +3,10 @@
 {% block content %}
 <!--Breadcrumb Area-->
 <section class="breadcrumb-area banner-6">
+
 	<div class="text-block">
 		<div class="container">
+
 			<div class="row">
 				<div class="col-lg-12 v-center">
 					<div class="bread-inner">
@@ -22,6 +24,9 @@
 			</div>
 		</div>
 	</div>
+
+
+
 </section>
 <!--End Breadcrumb Area-->
 
@@ -79,13 +84,60 @@
 				</div>
 				<div class="form-block">
 
-					<!-- Start form -->
-					<form id="contactForm" action="{% url 'website:contact' %}" data-bs-toggle="validator" method="POST" class="shake">
-						<div class="row">
-						{% csrf_token %}
-							{{forms.as_p}}
 
-							<button type="submit" name="submit"></button>
+
+					<!-- Start form -->
+					<form action="{% url 'website:contact' %}" data-bs-toggle="validator" method="POST" class="shake">
+						<div class="row">
+							{% csrf_token %}
+							<!-- {{forms.as_p}} -->
+							<!-- Name -->
+							<div class="form-group col-sm-6">
+								<input name="name" type="text" id="name" placeholder="نام" required
+									data-error="لطفا پر کنید">
+								<div class="help-block with-errors"></div>
+							</div>
+							<!-- Email -->
+							<div class="form-group col-sm-6">
+								<input name="email" type="email" id="email" placeholder="ایمیل" required>
+								<div class="help-block with-errors"></div>
+							</div>
+							<!-- number -->
+							<div class="form-group col-sm-6">
+								<input name="number" type="text" id="mobile" placeholder="موبایل" required
+									data-error="لطفا پر کنید">
+								<div class="help-block with-errors"></div>
+							</div>
+							<!-- Subject -->
+							<div class="form-group col-sm-6">
+								<input name="subject" type="text" visibliti id="subject" placeholder="موضوع">
+							</div>
+
+							<!-- Message -->
+							<div class="form-group">
+								<textarea name="message" rows="5" placeholder="پیام خود را وارد نمایید"
+									required></textarea>
+								<div class="help-block with-errors"></div>
+							</div>
+
+							<!-- موافقت با قوانین -->
+							<div class="custom-control custom-checkbox">
+								<input type="checkbox" class="custom-control-input" id="customCheck" name="example1"
+									checked="checked">
+								<label class="custom-control-label" for="customCheck">من با <a
+										href="javascript:void(0)">قوانین</a> موافقم</label>
+							</div>
+							<!--  Send Btn -->
+							<button type="submit" class="btn lnk btn-main bg-btn"> <span class="circle"></span>ارسال
+							</button>
+							<div id="msgSubmit" class="h3 text-center hidden"></div>
+							<div class="clearfix"></div>
+
+							<!-- عدم ارسال هرز نامه -->
+							<p class="trm"><i class="fas fa-lock"></i>ما از هرزنامه متنفریم و به حریم خصوصی شما احترام
+								می
+								گذاریم.</p>
+
 						</div>
 
 					</form>
@@ -108,7 +160,7 @@
 			<div class="col-lg-12">
 				<div class="map-div">
 					<iframe
-						src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d113874.29338087817!2d75.72051791246247!3d26.885346595411875!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x396c4adf4c57e281%3A0xce1c63a0cf22e09!2sJaipur%2C%20Rajasthan!5e0!3m2!1sen!2sin!4v1611838825763!5m2!1sen!2sin"
+						src="https://maps.google.com/maps?q=saveh&t=&z=13&ie=UTF8&iwloc=&output=embed"
 						allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
 				</div>
 			</div>
