Added text editor summernote
after added shall we migrate

--- a/templates/blog_pages/blog-single.html
+++ b/templates/blog_pages/blog-single.html
@@ -72,7 +72,7 @@
           <!-- Start TEXT -->
           <p>
 
-            {{posts.text_content}}
+            {{posts.text_content|safe}}
             <br>
             <hr>
 
