--- a/templates/website_pages/contact-us.html
+++ b/templates/website_pages/contact-us.html
@@ -119,7 +119,8 @@
 									required></textarea>
 								<div class="help-block with-errors"></div>
 							</div>
-
+							<div class="form-group">{{forms.captcha}}</div>
+							
 							<!-- موافقت با قوانین -->
 							<div class="custom-control custom-checkbox">
 								<input type="checkbox" class="custom-control-input" id="customCheck" name="example1"
@@ -139,6 +140,8 @@
 								گذاریم.</p>
 
 						</div>
+						
+						
 
 					</form>
 					<!-- End form -->
