added disqus system commenting

--- a/templates/blog_pages/blog-single.html
+++ b/templates/blog_pages/blog-single.html
@@ -28,11 +28,11 @@
         </div>
         <center>
           {% load search_bar %}
-          {% searchbar  %}
+          {% searchbar %}
         </center>
 
       </div>
-     
+
 
     </div>
 
@@ -54,9 +54,9 @@
                     class="img-fluid" /></div>
                 <div class="media-body user-info">
                   <a href="{% url 'blog:author' author_username=posts.author %}">
-                  <h5>توسط {{posts.author.get_full_name}}</h5>
-                  <!-- <p>{{posts.published_date.date}}</p> -->
-                </a>
+                    <h5>توسط {{posts.author.get_full_name}}</h5>
+                    <!-- <p>{{posts.published_date.date}}</p> -->
+                  </a>
                   <p>{{posts.published_date.date|date:"d M Y"}}</p>
                   {{posts.published_date|naturaltime}}
                 </div>
@@ -141,9 +141,33 @@
         <!--Start Writer section -->
         {% include 'blog_pages/blog-writer.html' %}
         <!-- End Writer section -->
+
+        <!-- start comment section -->
         <div class="comments-block mt60">
           <h2 class="mb60">نظرات:</h2>
-          <div class="media">
+          <!-- disqus -->
+          <div id="disqus_thread"></div>
+          <script>
+            /**
+            *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+            *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
+            /*
+            var disqus_config = function () {
+            this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+            this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+            };
+            */
+            (function () { // DON'T EDIT BELOW THIS LINE
+              var d = document, s = d.createElement('script');
+              s.src = 'https://http-127-0-0-1-8000-0aqvg36hfu.disqus.com/embed.js';
+              s.setAttribute('data-timestamp', +new Date());
+              (d.head || d.body).appendChild(s);
+            })();
+          </script>
+          <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by
+              Disqus.</a></noscript>
+              <!-- end disqus -->
+          <!-- <div class="media">
             <div class="user-image"><img src="{% static 'images/user-thumb/user3.jpg' %}" alt="girl"
                 class="img-fluid" /></div>
             <div class="media-body user-info">
@@ -197,9 +221,11 @@
                     class="fas fa-chevron-left fa-icon"></i><span class="circle"></span></button>
               </div>
             </form>
-          </div>
+          </div> -->
         </div>
       </div>
+      <!-- end comment section -->
+
       <!--End Blog Details-->
       <!--Start Sidebar-->
       <div class="col-lg-4">
@@ -218,7 +244,7 @@
 
           {% load blog_tag %}
           {% category_post %}
-          
+
           <!--End Blog Category-->
           <!--Start Popular Tags-->
           {% include 'blog_pages/blog-popular-tags.html' %}
