--- a/templates/base.html
+++ b/templates/base.html
@@ -90,6 +90,9 @@
                         <li class="sbmenu rpdropdown">
                             <a href="#" class="menu-links"> حساب کاربری </a>
                         </li>
+                        <li class="sbmenu rpdropdown">
+                            <a href="{% url 'accounts:logout' %}" class="menu-links"> خروج از حساب </a>
+                        </li>
                             {% else %}
                         <li class="sbmenu rpdropdown">
                             <a href="{% url 'accounts:login' %}" class="menu-links"> ورود ادمین </a>
