--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Signin</title>
+    <title>Login</title>
 
     <!-- Bootstrap core CSS -->
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
@@ -22,11 +22,11 @@
     <form class="form-signin" method="post" action="{% url 'accounts:login' %}">
         
         <img class="mb-4" src="{% static 'images/img_pagelogin/bootstrap-solid.svg' %}" alt="" width="72" height="72">
-        <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
+        <h1 class="h3 mb-3 font-weight-normal">Please Login</h1>
         {% csrf_token %}
         <!-- {{form}} -->
         <label class="sr-only">Username</label>
-        <input type="text" name="username" class="form-control" placeholder="Username" required autofocus>
+        <input type="text" name="username" class="form-control" placeholder="Username" required >
         
         <label  class="sr-only">Password</label>
         <input type="password" name="password" class="form-control" placeholder="Password" required>
@@ -39,6 +39,11 @@
         <p class="mt-5 mb-3 text-muted">&copy; 2022-2023</p>
     </form>
 
+    {% if messages %}
+    {% for message in messages %}
+    <script> alert('{{message}}')</script>
+    {% endfor %}
+    {% endif %}
 
 </body>
 
